--- a/BlogManagement.Service/BlogManagement.Service.csproj
+++ b/BlogManagement.Service/BlogManagement.Service.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlogManagement.Data\BlogManagement.Data.csproj" />
+  </ItemGroup>
+
 </Project>
