createToken and refreshToken

--- a/BlogManagement.Infrastructure/BlogManagement.Infrastructure.csproj
+++ b/BlogManagement.Infrastructure/BlogManagement.Infrastructure.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BlogManagement.Authentication.Service\BlogManagement.Authentication.Service.csproj" />
     <ProjectReference Include="..\BlogManagement.Data\BlogManagement.Data.csproj" />
     <ProjectReference Include="..\BlogManagement.Service\BlogManagement.Service.csproj" />
   </ItemGroup>
