--- a/BlogManagement/appsettings.json
+++ b/BlogManagement/appsettings.json
@@ -10,5 +10,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "TokenBear": {
+    "Issuer": "https://localhost:44309/",
+    "Audience": "Owner",
+    "SignatureKey": "c89010d9-7952-467e-81c7-cfd302f9eed8",
+    "AccessTokenExpiredByMinutes": 180,
+    "RefreshTokenExpiredByHours": 20
+  },
   "AllowedHosts": "*"
 }
