add seed data (user, role)

--- a/BlogManagement/appsettings.json
+++ b/BlogManagement/appsettings.json
@@ -17,5 +17,15 @@
     "AccessTokenExpiredByMinutes": 180,
     "RefreshTokenExpiredByHours": 20
   },
+  "DefaultUser": {
+    "Username": "administrator",
+    "Email": "admin@ymail.com",
+    "Role": "SuperAdmin",
+    "Password": "Admin@123"
+  },
+  "DefaultRole": [
+    "SuperAdmin",
+    "User"
+  ],
   "AllowedHosts": "*"
 }
