--- a/BlogManagement/appsettings.json
+++ b/BlogManagement/appsettings.json
@@ -27,5 +27,13 @@
     "SuperAdmin",
     "User"
   ],
+  "MailSettings": {
+    "DefaultSender": "tienbanket@gmail.com",
+    "Password": "xigpgdkcnxpmanjm",
+    "DisplayName": "AspNetCore.WebApi",
+    "Provider": "smtp.gmail.com",
+    "Port": 587
+  },
   "AllowedHosts": "*"
 }
+//IOption
