--- a/BlogManagement/appsettings.json
+++ b/BlogManagement/appsettings.json
@@ -34,6 +34,7 @@
     "Provider": "smtp.gmail.com",
     "Port": 587
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationUrl": "http://localhost:4200/"
 }
 //IOption
