--- a/BlogManagement/appsettings.json
+++ b/BlogManagement/appsettings.json
@@ -34,6 +34,12 @@
     "Provider": "smtp.gmail.com",
     "Port": 587
   },
+  "JwtIssuerOptions": {
+    "Issuer": "webApi",
+    "Audience": "https://localhost:44309/",
+    "UrlClientEndUser": "",
+    "UrlClientAdmin": ""
+  },
   "AllowedHosts": "*",
   "ApplicationUrl": "http://localhost:4200/"
 }
