--- a/BlogManagement/appsettings.json
+++ b/BlogManagement/appsettings.json
@@ -40,6 +40,12 @@
     "UrlClientEndUser": "",
     "UrlClientAdmin": ""
   },
+  "UploadConfigurations": {
+    "TempFolder": "/Temp",
+    "ImageUrl": "Upload/Images",
+    "FileUrl": "Upload/Files",
+    "ChunkSize": 3
+  },
   "AllowedHosts": "*",
   "ApplicationUrl": "http://localhost:4200/"
 }
