--- a/BlogManagement/BlogManagement.WebAPI.csproj
+++ b/BlogManagement/BlogManagement.WebAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -34,7 +34,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\Upload\Files\" />
+    <Folder Include="wwwroot\Upload\Images\" />
   </ItemGroup>
 
 </Project>
