--- a/BlogManagement/BlogManagement.WebAPI.csproj
+++ b/BlogManagement/BlogManagement.WebAPI.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\2024\" />
     <Folder Include="wwwroot\Upload\Files\" />
     <Folder Include="wwwroot\Upload\Images\" />
   </ItemGroup>
